--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,16 @@
   font-family: "Verlag";
   src: local("Verlag"), url("./font/Verlag Bold.otf") format("opentype");
 }
+@font-face {
+  font-family: "knockout47";
+  src: local("knockout47"), url("./font/knockout47.ttf") format("opentype");
+}
+
+.underline--white::after {
+  content: ""; /* This is necessary for the pseudo element to work. */
+  display: block; /* This will put the pseudo element on its own line. */
+  margin: 0 auto; /* This will center the border. */
+  width: 25%; /* Change this to whatever width you want. */
+  padding-top: 20px; /* This creates some space between the element and the border. */
+  border-bottom: 5px solid white;
+}
