--- a/src/App.css
+++ b/src/App.css
@@ -2,35 +2,55 @@
   font-family: "Verlag";
   src: local("Verlag"), url("./font/Verlag Bold.otf") format("opentype");
 }
+
 @font-face {
   font-family: "knockout47";
   src: local("knockout47"), url("./font/knockout47.ttf") format("opentype");
 }
+
 @font-face {
   font-family: "Vidaloka";
   src: local("Vidaloka"), url("./font/Vidaloka-Regular.ttf") format("opentype");
 }
+
 @font-face {
   font-family: "PatuaOne";
   src: local("PatuaOne"), url("./font/PatuaOne-Regular.ttf") format("opentype");
 }
+
 .underline--white::after {
-  content: ""; /* This is necessary for the pseudo element to work. */
-  display: block; /* This will put the pseudo element on its own line. */
-  margin: 0 auto; /* This will center the border. */
-  width: 20%; /* Change this to whatever width you want. */
+  content: "";
+  /* This is necessary for the pseudo element to work. */
+  display: block;
+  /* This will put the pseudo element on its own line. */
+  margin: 0 auto;
+  /* This will center the border. */
+  width: 20%;
+  /* Change this to whatever width you want. */
   border-bottom: 2px solid white;
 }
+
 .underline--gray::after {
-  content: ""; /* This is necessary for the pseudo element to work. */
-  display: block; /* This will put the pseudo element on its own line. */
-  margin: 0 auto; /* This will center the border. */
-  width: 100%; /* Change this to whatever width you want. */
-  padding-top: 20px; /* This creates some space between the element and the border. */
+  content: "";
+  /* This is necessary for the pseudo element to work. */
+  display: block;
+  /* This will put the pseudo element on its own line. */
+  margin: 0 auto;
+  /* This will center the border. */
+  width: 100%;
+  /* Change this to whatever width you want. */
+  padding-top: 20px;
+  /* This creates some space between the element and the border. */
   border-bottom: 2px solid #808080;
 }
 
 .link {
-  color:#873431;
+  color: #873431;
   text-decoration: underline;
+}
+
+
+
+.link:hover {
+  color: #873431;
 }
