--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@
   margin: 0 auto;
   /* This will center the border. */
   width: 20%;
+  margin-top: 30px;
+  margin-bottom: 20px;
   /* Change this to whatever width you want. */
   border-bottom: 2px solid white;
 }
@@ -42,6 +44,20 @@
   padding-top: 20px;
   /* This creates some space between the element and the border. */
   border-bottom: 2px solid #808080;
+}
+
+.underlineTop--gray::before {
+  content: "";
+  /* This is necessary for the pseudo element to work. */
+  display: block;
+  /* This will put the pseudo element on its own line. */
+  margin: 0 auto;
+  /* This will center the border. */
+  width: 100%;
+  /* Change this to whatever width you want. */
+  padding-top: 20px;
+  /* This creates some space between the element and the border. */
+  border-bottom: 1px solid #808080;
 }
 
 .link,
