--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
 }
+
 .header__fullName {
   height: 15px;
   width: 190px;
@@ -23,16 +24,19 @@
 .header__nav {
   height: 100%;
 }
+
 .header__list {
   display: flex;
   list-style-type: none;
   height: 100%;
 }
-.header__list > li {
+
+.header__list>li {
   display: flex;
   align-items: center;
 }
-.header__list > li > a {
+
+.header__list>li>a {
   color: #756f65;
   text-decoration: none;
   text-transform: uppercase;
@@ -40,9 +44,11 @@
   padding-left: 15px;
   padding-right: 15px;
 }
-.header__list > li + li > a {
+
+.header__list>li+li>a {
   border-left: 2px solid #886735;
 }
+
 .header__orderOnline {
   background-color: #886735;
   color: #dacfbf;
@@ -52,17 +58,20 @@
   padding-left: 15px;
   text-decoration: none;
 }
+
 .header__orderOnline:hover {
   text-decoration: none;
+  cursor: pointer;
 }
 
-.header__orderOnline > li {
+.header__orderOnline>li {
   color: #dacfbf;
   font-size: 1em;
   font-family: Verlag;
   text-transform: uppercase;
 }
-.header__list > li > a:hover {
+
+.header__list>li>a:hover {
   color: #a37c3d;
 }
 
@@ -71,21 +80,25 @@
   align-items: center;
   cursor: pointer;
 }
+
 .header__basket {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+
 .header__cart {
   margin-right: 15px;
   display: flex;
   align-items: center;
 }
-.header__cart > p {
+
+.header__cart>p {
   font-size: 1.4em;
   margin: auto 0;
 }
+
 .header__basketCount {
   width: 25px;
   height: 20px;
